# breeze-plymouth-animation1

breeze/: CMakeLists.txt  breeze.script.cmake  neon-shrink.plymouth.cmake
